# Splatoon3TableturfBattle

./: .gitignore  Cargo.toml  README.md  run.sh
bot/: Cargo.toml
bot/src/: main.rs
judge/: Cargo.toml
judge/src/: main.rs
record_player/: Cargo.toml
record_player/src/: main.rs
resources/: card_catalog_sample.json
src/: lib.rs  text_protocol.rs
