[package]
name = "tableturfbattle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name= "judge"
path = "judge/src/main.rs"
[[bin]]
name= "bot"
path = "bot/src/main.rs"

[workspace]
members = [
    "bot",
    "judge",
]

[dependencies]
serde = {version="1.0.145", features = ["derive"]}
serde_json = "1.0.84"
rand = "0.8.5"
env_logger = "0.9.1"
log = "0.4.17"